<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_find"
        android:icon="@drawable/ic_search"
        android:title="@string/title_find"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_location"
        android:icon="@drawable/ic_room"
        android:title="@string/title_location"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_configurations"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_configurations"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_AR"
        android:icon="@drawable/ic_cardboard"
        android:title="@string/title_AR"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

</menu>
