<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorGray"
    android:layout_height="match_parent"
    tools:context="com.shibuyaxpress.paginasamarillas.fragments.EncontrarFragment">

    <android.support.v7.widget.CardView
        android:layout_below="@id/detcardbar"
        android:layout_margin="10dp"
        android:id="@+id/card_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/title_search"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editext_busqueda"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_rounded_border"
                    android:ems="10"
                    android:imeOptions="actionSearch"
                    android:inputType="textPersonName"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp" />

                <ImageButton
                    android:id="@+id/btn_search"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/bg_rounded_yellow"
                    android:contentDescription="@string/content_description_image"
                    android:elevation="@dimen/cardview_default_elevation"
                    app:srcCompat="@drawable/ic_search"
                    tools:targetApi="lollipop" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title_where"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button"
                    android:drawableStart="@drawable/ic_location_city_white"
                    android:text="@string/label_button_cities"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/button3"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/bg_button"
                    android:drawableStart="@drawable/ic_room_white"
                    android:text="@string/title_location"
                    android:textColor="@android:color/white" />

            </LinearLayout>
            <TextView
                android:drawableStart="@drawable/ic_person_black"
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_current_location" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>
